--- a/desktopapp/VehicleDetailWindow.xaml
+++ b/desktopapp/VehicleDetailWindow.xaml
@@ -19,9 +19,6 @@
         <Label Content="Tovární značka:" HorizontalAlignment="Left" Margin="310,70,0,0" Grid.Row="1" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
         <Label Content="VIN kód:" HorizontalAlignment="Left" Margin="10,130,0,0" Grid.Row="1" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
         <Label Content="Rok výroby:" HorizontalAlignment="Left" Margin="310,130,0,0" Grid.Row="1" VerticalAlignment="Top" Foreground="White" FontSize="14"/>
-        <Button Content="Detail" HorizontalAlignment="Left" Margin="686,42,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Editovat" HorizontalAlignment="Left" Margin="686,102,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Smazat" HorizontalAlignment="Left" Margin="686,162,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75"/>
         <TextBox Name="tbTitle" HorizontalAlignment="Left" Height="26" Margin="10,40,0,0" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="270" IsReadOnly="True"/>
         <TextBox Name="tbType" HorizontalAlignment="Left" Height="26" Margin="10,100,0,0" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="270" IsReadOnly="True"/>
         <TextBox Name="tbVin" HorizontalAlignment="Left" Height="26" Margin="10,160,0,0" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="270" IsReadOnly="True"/>
@@ -35,8 +32,6 @@
         <TextBox Name="tbValidDays" HorizontalAlignment="Left" Height="26" Margin="10,69,0,0" Grid.Row="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="270" IsReadOnly="True"/>
         <TextBox Name="tbStation" HorizontalAlignment="Left" Height="26" Margin="10,129,0,0" Grid.Row="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="270" IsReadOnly="True"/>
         <TextBox Name="tbValidTo" HorizontalAlignment="Left" Height="26" Margin="310,69,0,0" Grid.Row="2" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="270" IsReadOnly="True"/>
-        <Button Content="Prodloužit" HorizontalAlignment="Left" Margin="686,33,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Editovat" HorizontalAlignment="Left" Margin="686,93,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75"/>
-        <Button Content="Smazat" HorizontalAlignment="Left" Margin="686,153,0,0" Grid.Row="2" VerticalAlignment="Top" Width="75"/>
+        <Button Name="btnDelete" Content="Smazat" HorizontalAlignment="Left" Margin="687,103,0,0" Grid.Row="1" Width="70" VerticalAlignment="Top" Click="btnDelete_Click"/>
     </Grid>
 </Window>
