--- a/mvcapp/Views/Drivers/Create.cshtml
+++ b/mvcapp/Views/Drivers/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model coreapp.models.UserDriverModel
+﻿@model coreapp.models.UserDriver
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>UserDriverModel</h4>
+<h4>UserDriver</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
