--- a/mvcapp/Views/Drivers/Edit.cshtml
+++ b/mvcapp/Views/Drivers/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model coreapp.models.UserDriverModel
+﻿@model coreapp.models.UserDriver
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>UserDriverModel @Model.Id.ToString()</h4>
+<h4>UserDriver @Model.Id.ToString()</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
