--- a/mvcapp/Views/Drivers/Index.cshtml
+++ b/mvcapp/Views/Drivers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<coreapp.models.UserDriverModel>
+﻿@model IEnumerable<coreapp.models.UserDriver>
 
 @{
     ViewData["Title"] = "Index";
