--- a/mvcapp/Views/Drivers/Delete.cshtml
+++ b/mvcapp/Views/Drivers/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model coreapp.models.UserDriverModel
+﻿@model coreapp.models.UserDriver
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>UserDriverModel</h4>
+    <h4>UserDriver</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
