--- a/mvcapp/Views/Drivers/Details.cshtml
+++ b/mvcapp/Views/Drivers/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model coreapp.models.UserDriverModel
+﻿@model coreapp.models.UserDriver
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>UserDriverModel</h4>
+    <h4>UserDriver</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
