--- a/mvcapp/Views/Stats/Index.cshtml
+++ b/mvcapp/Views/Stats/Index.cshtml
@@ -30,7 +30,7 @@
         </tr>
         <tr>
             <td>
-                Celkový počet řidičů na vozdilech ve vaší správě:
+                Celkový počet řidičů na vozidlech ve vaší správě:
             </td>
             <td>
                 @drivers
