--- a/mvcapp/Views/Shared/_Layout.cshtml
+++ b/mvcapp/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Vehicles" asp-action="Index">Vozidla</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Inspections" asp-action="Index">STK</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Stats" asp-action="Index">Statistiky</a>
                         </li>
                     </ul>
