--- a/mvcapp/Views/Vehicles/Create.cshtml
+++ b/mvcapp/Views/Vehicles/Create.cshtml
@@ -3,25 +3,26 @@
 
 @{
     ViewData["Title"] = "Create";
-    List<VehicleType> types = (List<VehicleType>) ViewData["vehicleTypes"];
-    List<VehicleBrand> brands = (List<VehicleBrand>) ViewData["vehicleBrands"];
-    List<UserDriver> drivers = (List<UserDriver>) ViewData["drivers"];
-    List<UserBoss> bosses = (List<UserBoss>) ViewData["bosses"];
+    List<VehicleType> types = (List<VehicleType>)ViewData["vehicleTypes"];
+    List<VehicleBrand> brands = (List<VehicleBrand>)ViewData["vehicleBrands"];
+    List<UserDriver> drivers = (List<UserDriver>)ViewData["drivers"];
+    List<UserBoss> bosses = (List<UserBoss>)ViewData["bosses"];
 }
 
 <h1>Create</h1>
 
 <h4>Vehicle</h4>
 <hr />
+@*<h2>@TempData["SuccessMessage"]</h2>*@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @*<div class="form-group">
-            <label asp-for="Id" class="control-label"></label>
-            <input asp-for="Id" class="form-control" />
-            <span asp-validation-for="Id" class="text-danger"></span>
-        </div>*@
+                    <label asp-for="Id" class="control-label"></label>
+                    <input asp-for="Id" class="form-control" />
+                    <span asp-validation-for="Id" class="text-danger"></span>
+                </div>*@
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
